Cover all score_keeper functionality

--- a/js/dom/score_keeper/index.html
+++ b/js/dom/score_keeper/index.html
@@ -13,13 +13,13 @@
         <span> : </span>
         <span class="player-2">0</span>
       </div>
-      <div>Playing to <span class="victory-count">5</span></div>
-      <input type="number">
+      <div>Playing to <span id="victory-count">_</span></div>
+      <input type="number" class="victory-count-adjustment">
       <div class="buttons">
-        <button type="button reward-player-1" name="button">Player One</button>
-        <button type="button reward-player-2" name="button">Player Two</button>
+        <button type="button" class="reward-player-1">Player One</button>
+        <button type="button" class="reward-player-2">Player Two</button>
       </div>
-      <button type="button" name="button">Reset</button>
+      <button type="button" class="reset">Reset</button>
     </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
